# autoware_architect

./: README.md  autoware_architect.instructions.md  autoware_system_designer.instructions.md
autoware_architect/: CMakeLists.txt  autoware_architect-extras.cmake
autoware_architect/autoware_architect/: config.py  deployment.py
autoware_architect/autoware_architect/builder/: instances.py  launcher_generator.py  parameter_manager.py  parameter_template_generator.py
autoware_architect/autoware_architect/models/: config.py  events.py
autoware_architect/autoware_architect/utils/: build_script_generator.py
autoware_architect/autoware_architect/visualization/: visualization_guide.py
autoware_architect/cmake/: autoware_architect_build_deploy.cmake
autoware_architect/script/: collect_autoware_descriptions.py  collect_system_descriptions.py  deployment_process.py  generate_node_launcher.py
autoware_architect/template/: parameter_set.yaml.jinja2
autoware_architect/template/launcher/: component_launcher.xml.jinja2  node_launcher.xml.jinja2
autoware_architect/template/visualization/page/: deployment_overview.html.jinja2  node_diagram.js.jinja2
autoware_architect_dummy_modules/: CMakeLists.txt  package.xml
autoware_architect_dummy_modules/architecture/: ControlDummy.node.yaml  MapDummy.node.yaml  (+2 more)
autoware_architect_examples/: CMakeLists.txt  package.xml
autoware_system_design_examples/: CMakeLists.txt  package.xml
autoware_system_designer/: CMakeLists.txt  autoware_system_designer-extras.cmake  package.xml  setup.py
autoware_system_dummy_modules/: CMakeLists.txt  package.xml
(+68 files in other folders)
